# vietnam-lottery-xsmb-analysis

./: .editorconfig  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: update-data.yml
data/: xsmb-2-digits.csv  xsmb-2-digits.json  xsmb-2-digits.parquet  xsmb-sparse.csv  xsmb-sparse.parquet  xsmb.csv  xsmb.json  xsmb.parquet
results/: xsmb.csv  xsmb_1_year.csv  xsmb_2_year.csv  xsmb_3_year.csv  xsmb_5_year.csv  xsmb_sparse.csv
src/: analyze.py  dtos.py  fetch.py  lottery.py
src/templates/: README.j2  __init__.py
templates/: README.j2
