[project]
name = "vietnam-lottery-xsmb-analysis"
version = "0.1.0"
description = "Using GitHub Action to automatically fetch and analyze results of the Vietnam lottery daily."
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "MIT"}

requires-python = "==3.14.*"

dependencies = [
    "tzdata==2026.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "cloudscraper==1.2.71",
    "tenacity==9.1.4",
    "beautifulsoup4==4.15.0",
    "lxml==6.1.1",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "pyarrow==25.0.0",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "jinja2==3.1.6",
]

[dependency-groups]
tools = [
]
testing = [
    "pytest",
    "pytest-asyncio",
]
linting = [
    "isort",
    "ruff",
]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
